--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./images/dice-5.png" alt="Dice" class="dice" id="dice-2" />
     </div>
 
-    <!--<script src="app.js"></script>-->
-    <script src="index.js"></script>
+    <script src="challanges.js"></script>
+    <!-- <script src="index.js"></script> -->
   </body>
 </html>
